<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"  />
    <item
        android:id="@+id/consult"
        android:icon="@drawable/ic_consult"
        android:title="@string/consult" />
    <item
        android:id="@+id/community"
        android:icon="@drawable/ic_community"
        android:title="@string/community"
        />
    <item
        android:id="@+id/journal"
        android:icon="@drawable/ic_journals"
        android:title="@string/journal"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        />
</menu>