<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_200"
    tools:context=".setting.SubscriptionActivity">

    <!-- Benefits Container -->
    <LinearLayout
        android:id="@+id/benefitsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="132dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_subscription_you_get_the_following_benefit"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_circle"
                android:drawablePadding="8dp"
                android:text="Get professional counsellor quickly"
                android:textSize="14sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_circle"
                android:drawablePadding="8dp"
                android:text="Start any counselling session for free"
                android:textSize="14sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_circle"
                android:drawablePadding="8dp"
                android:text="Allows unlimited conversation with Chat Bot"
                android:textSize="14sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_circle"
                android:drawablePadding="8dp"
                android:text="Allows you to use your username in groupchat"
                android:textSize="14sp"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <!-- Choose your subscription plan -->
    <TextView
        android:id="@+id/choosePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose your subscription plan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/benefitsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Yearly Package Card -->
    <LinearLayout
        android:id="@+id/yearlyPackage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="16dp"
        android:background="@drawable/button_white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/choosePlan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yearly Package"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Subscription"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#00CC00"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_1_000_000"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp. 800.000/Year"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>
    </LinearLayout>

    <!-- Monthly Package Card -->
    <LinearLayout
        android:id="@+id/monthlyPackage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="12dp"
        android:padding="16dp"

        app:layout_constraintTop_toBottomOf="@id/yearlyPackage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly Package"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Subscription"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#00CC00"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_400_000"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp. 250.000/Month"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
